--- a/.github/build_apk.yml
+++ b/.github/build_apk.yml
@@ -3,50 +3,29 @@ name: Build APK and Send to Telegram
 on:
   push:
     branches:
-      - main # Jalankan setiap kali ada push ke branch 'main'
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: '11'
-
-      - name: Install dependencies
-        run: |
-          cd android
-          chmod +x ./gradlew
 
       - name: Build APK
         run: |
           cd android
           ./gradlew assembleRelease
 
-      - name: Upload APK as Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: app-release.apk
-          path: android/app/build/outputs/apk/release/app-release.apk
-
-  send-to-telegram:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Download APK artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: app-release.apk
-
       - name: Send APK to Telegram
-        env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          curl -F chat_id=$TELEGRAM_CHAT_ID -F document=@app-release.apk https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendDocument
+          curl -F chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+               -F document=@android/app/build/outputs/apk/release/app-release.apk \
+               -F caption="Here is the APK build" \
+               https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument
