--- a/.github/build_apk.yml
+++ b/.github/build_apk.yml
@@ -1,4 +1,4 @@
-name: Build APK and Send to Telegram
+name: Build and Send APK to Telegram
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -15,20 +16,25 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          distribution: 'adopt'
           java-version: '11'
 
-      - name: Grant execution permission to Gradle wrapper
-        run: chmod +x ./android/gradlew
+      - name: Install Node.js dependencies
+        run: npm install
 
-      - name: Build APK
+      - name: Set permissions for gradlew
+        run: chmod +x android/gradlew
+
+      - name: Build Android APK
         run: |
           cd android
           ./gradlew assembleRelease
 
       - name: Send APK to Telegram
         run: |
-          curl -F chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
-               -F document=@android/app/build/outputs/apk/release/app-release.apk \
-               -F caption="Here is the APK build" \
-               https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument
+          cd app/build/outputs/apk/release/
+          curl -X POST -H 'Content-Type: multipart/form-data' -F text='Test Glafidsya Doctor' -F chat_id=$TG_CHAT_ID $TG_BOT_TOKEN/sendMessage
+          curl -X POST -H 'Content-Type: multipart/form-data' -F document=@app-release.apk -F chat_id=$TG_CHAT_ID $TG_BOT_TOKEN/sendDocument
+
+    artifacts:
+      paths:
+        - android/app/build/outputs/apk/
