--- a/.github/build_apk.yml
+++ b/.github/build_apk.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Send APK to Telegram
         run: |
-          cd app/build/outputs/apk/release/
-          curl -X POST -H 'Content-Type: multipart/form-data' -F text='Test Glafidsya Doctor' -F chat_id=$TG_CHAT_ID $TG_BOT_TOKEN/sendMessage
+          cd android/app/build/outputs/apk/release/
+          curl -X POST -H 'Content-Type: multipart/form-data' -F text='Mailing Jli' -F chat_id=$TG_CHAT_ID $TG_BOT_TOKEN/sendMessage
           curl -X POST -H 'Content-Type: multipart/form-data' -F document=@app-release.apk -F chat_id=$TG_CHAT_ID $TG_BOT_TOKEN/sendDocument
 
     artifacts:
