--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3 # Update to the latest version
         with:
           java-version: '11'
+          distribution: 'temurin' # Tambahkan distribusi Java
 
       - name: Install Node.js dependencies
         run: npm install
