--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3 # Update to the latest version
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3 # Pastikan menggunakan versi terbaru
         with:
-          java-version: '11'
-          distribution: 'temurin' # Tambahkan distribusi Java
+          java-version: '17' # Ubah versi Java ke 17
+          distribution: 'temurin' # Distribusi Java yang diinginkan
 
       - name: Install Node.js dependencies
         run: npm install
@@ -37,7 +37,7 @@ jobs:
           curl -X POST -H 'Content-Type: multipart/form-data' -F document=@app-release.apk -F chat_id=$TG_CHAT_ID $TG_BOT_TOKEN/sendDocument
 
       - name: Upload APK artifact
-        uses: actions/upload-artifact@v3 # Update to the latest version
+        uses: actions/upload-artifact@v3 # Pastikan menggunakan versi terbaru
         with:
           name: android-apk
           path: android/app/build/outputs/apk/release/app-release.apk
