--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3 # Pastikan menggunakan versi terbaru
+        uses: actions/setup-java@v3
         with:
-          java-version: '17' # Ubah versi Java ke 17
-          distribution: 'temurin' # Distribusi Java yang diinginkan
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Install Node.js dependencies
         run: npm install
@@ -33,11 +33,11 @@ jobs:
       - name: Send APK to Telegram
         run: |
           cd android/app/build/outputs/apk/release/
-          curl -X POST -H 'Content-Type: multipart/form-data' -F text='Testing' -F chat_id=$TG_CHAT_ID $TG_BOT_TOKEN/sendMessage
-          curl -X POST -H 'Content-Type: multipart/form-data' -F document=@app-release.apk -F chat_id=$TG_CHAT_ID $TG_BOT_TOKEN/sendDocument
+          curl -X POST -H 'Content-Type: multipart/form-data' -F "text='Testing'" -F "chat_id=${{ secrets.TG_CHAT_ID }}" "${{ secrets.TG_BOT_TOKEN }}/sendMessage"
+          curl -X POST -H 'Content-Type: multipart/form-data' -F "document=@app-release.apk" -F "chat_id=${{ secrets.TG_CHAT_ID }}" "${{ secrets.TG_BOT_TOKEN }}/sendDocument"
 
       - name: Upload APK artifact
-        uses: actions/upload-artifact@v3 # Pastikan menggunakan versi terbaru
+        uses: actions/upload-artifact@v3
         with:
           name: android-apk
           path: android/app/build/outputs/apk/release/app-release.apk
